--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	copyright 2019 Franz
 -->
 <head>
-	<title>An example web site</title>
+	<title>A great web site Master</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +17,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Scritto da Master per creare conflitto
 		</p>
 	</main>
 	<footer class="container">
