aggiunta riga in simple.html per creare conflitto branch bigtrouble

--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!--
 	copyright 2019 Franz
-	aggiunta riga per creare conflitto
+	Cambiato riga in branch bigtrouble per creare conflitto
 -->
 <head>
-	<title>An example web site</title>
+	<title>An example web site scitto da bigtrouble</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,7 +18,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Scritto da realwork
+			Conflitto scritto da Franz
 		</p>
 	</main>
 	<footer class="container">
